# simple_lang_switcher

./: .gitignore  LICENSE  README.md  index.html  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: keyboard_hook.rs  lang_switch.rs  lib.rs
src/components/ui/: badge.tsx  button.tsx  card.tsx  select.tsx  separator.tsx  switch.tsx  tooltip.tsx
src/lib/: store.ts
